# feral

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/plans/: architecture.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  project.rs
src-tauri/src/framework/: charm.rs  mod.rs
src/components/: Canvas.tsx  CoderNode.tsx  PromptNode.tsx  RunnerNode.tsx  SettingsDialog.tsx  TemplateGallery.tsx  TemplateSidebar.tsx  TerminalNode.tsx  Toolbar.tsx
src/lib/: terminal.ts
templates/: README.md
templates/altscreen-toggle/: altscreentoggle.go  template.yaml
templates/autocomplete/: autocomplete.go  template.yaml
templates/chat/: chat.go  template.yaml
templates/composable-views/: composableviews.go  template.yaml
templates/dashboard/: dashboard.go  template.yaml  ui.go
templates/debounce/: debounce.go  template.yaml
templates/doom-fire/: doomfire.go  template.yaml
templates/eyes/: eyes.go  template.yaml
templates/file-picker/: filepicker.go  template.yaml
templates/focus-blur/: focusblur.go  template.yaml
templates/fullscreen/: fullscreen.go  template.yaml
templates/glamour/: glamour.go  template.yaml
templates/help/: help.go  template.yaml
templates/http/: http.go  template.yaml
templates/isbn-form/: isbn-form.go  template.yaml
templates/list-default/: listdefault.go  template.yaml
templates/list-fancy/: listfancy.go  template.yaml
templates/list-simple/: listsimple.go  template.yaml
(+58 files in other folders)
